creusot/tests/should_fail/prusti/traits/lifetimes.stderr
error: function was supposed to return data with type `&'d mut Y` but it is returning data with type `&'c mut Y`
       expected `'d` found `'c`
  --> lifetimes.rs:14:5
   |
14 |     fn test<'c: 'd, 'd>(x: &'c mut Y) -> &'c mut Y {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

